# email-threat-investigator

./: .gitignore  LICENSE  README.md  pyproject.toml
.streamlit/: config.toml
docs/plans/: 2026-06-03-project-blueprint.md  2026-06-04-feature-prioritization-notes.md
reports/: README.md
samples/: bec-reply-only-scam.eml  benign-newsletter.eml  fake-microsoft-login.eml  legitimate-company-email.eml  suspicious-reply-to-bec.eml  synthetic-chronopost-cloud-storage-phish.eml  synthetic-forwarded-arc-legitimate.eml  synthetic-generated-sender-spam.eml  synthetic-invoice-attachment-phish.eml  synthetic-iptv-cloud-storage-spam.eml  synthetic-omnisend-splach-marketing.eml  synthetic-paypal-raw-ip-payment-phish.eml  synthetic-salesforce-marketing-email.eml
src/phishtriage/: app.py  attachment_analyzer.py  auth_analyzer.py  cli.py  content_analyzer.py  email_utils.py  guidance.py  infrastructure_analyzer.py  models.py  parser.py  reply_analyzer.py  report.py  route_analyzer.py  scoring.py  sender_analyzer.py  url_analyzer.py
tests/: test_app.py  test_attachment_analyzer.py  test_auth_analyzer.py  test_cli.py  test_content_analyzer.py  test_email_utils.py  test_infrastructure_analyzer.py  test_mvp_integration.py  test_parser.py  test_parser_extended.py  test_reply_analyzer.py  test_report.py  test_route_analyzer.py  test_sample_scenarios.py  test_scoring.py  test_sender_analyzer.py  test_url_analyzer.py
