[project]
name = "email-threat-investigator"
version = "0.1.0"
description = "User-friendly phishing/email investigation toolkit for suspicious .eml files."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40.0",
]

[project.scripts]
phishtriage = "phishtriage.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phishtriage"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
